syntax = "proto3";

package org.project_planton.provider.aws.awslambda.v1;

import "org/project-planton/provider/aws/awslambda/v1/api.proto";
import "org/project-planton/provider/aws/provider.proto";

// AwsLambdaStackInput defines the inputs passed to IaC to provision an AWS Lambda resource.
message AwsLambdaStackInput {
  // target
  AwsLambda target = 1;

  // provider-credential
  org.project_planton.provider.aws.AwsProviderConfig provider_config = 2;
}
