syntax = "proto3";

package project.planton.provider.aws.awslambda.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/aws/awslambda/v1/spec.proto";
import "project/planton/provider/aws/awslambda/v1/stack_outputs.proto";
import "project/planton/shared/status.proto";
import "project/planton/shared/metadata.proto";

//aws-lambda
message AwsLambda {
  //api-version
  string api_version = 1[
    (buf.validate.field).string.const = 'aws.project-planton.org/v1'
  ];

  //resource-kind
  string kind = 2 [
    (buf.validate.field).string.const = 'AwsLambda'
  ];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [
    (buf.validate.field).required = true
  ];

  //spec
  AwsLambdaSpec spec = 4 [
    (buf.validate.field).required = true
  ];

  //status
  AwsLambdaStatus status = 5;
}

//aws-lambda status
message AwsLambdaStatus {
  //lifecycle
  project.planton.shared.ApiResourceLifecycle lifecycle = 99;

  //audit-info
  project.planton.shared.ApiResourceAudit audit = 98;

  //stack-job id
  string stack_job_id = 97;

  //stack-outputs
  AwsLambdaStackOutputs outputs = 1;
}
